# mmqlc

./: .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md
CMake Generated Makefiles/: CMakeCache.txt  Makefile  cmake_install.cmake
CMake Generated Makefiles/MMQL/: Makefile  cmake_install.cmake
CMake Generated Makefiles/MMQLC/: Makefile  cmake_install.cmake
DetailedDocs/: CHANGELOG.md  COMPLEX_NUMBERS.md  Change_Log.md  MMQL.md  MMQLC_USE.md  MmQLC_Usage.md  PLANS.md  REAL_NUMBERS.md  SupportedQueries.md  VARIABLES.md  complexNumbers.md  notice.md  plan.md  plans.md  realNumbers.md  vars.md
mmql-source-code/: CMakeLists.txt  ReadView__WriteSave.hpp  includes.hpp  main.cpp  readme.md
mmqlc-source-code/: CMakeLists.txt  calcAnswer.hpp  compiler.hpp  compiler.hpp~  fileManager.hpp  main.cpp  queryLexer.hpp  queryParser.hpp  queryTokenizer.hpp  readme.md
mmqlc_cmplx-source-code/: comingSoon.md
mmqlc_mat-source-code/: comingSoon.md
mmqlc_vct-source-code/: comingSoon.md
src/: CMakeLists.txt  main.cpp
src/dependencies/: boost.md  color.hpp  eigen.md
src/headers/: calculator.hpp  constants.hpp  filesystem.hpp  functions.hpp  mmqlc.calculator.hpp  mmqlc.constants.hpp  mmqlc.filesystem.hpp  mmqlc.functions.hpp  mmqlc.hpp  mmqlc.multiprecision.hpp  mmqlc.parser.hpp  mmqlc.regex.hpp  mmqlc.tokenizer.hpp  mmqlc.ui.hpp  mmqlc.variables.hpp  multiprecision.hpp  parser.hpp  tokenizer.hpp
syntax_highlighting/: readme.md
syntax_highlighting/User/: MmQL.sublime-color-scheme  MmQL.sublime-settings  MmQL.sublime-syntax  Package Control.sublime-settings  Preferences.sublime-settings
