################################################################################################
cmake_minimum_required(VERSION 3.28) # Minimum version of cmake required to build project
################################################################################################
project(mmql-package) # Project name
################################################################################################
set(CMAKE_CXX_STANDARD 23) # C++ standard version
################################################################################################
add_subdirectory(mmql-source-code MMQL)
add_subdirectory(mmqlc-source-code MMQLC)
################################################################################################